// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`retinaImage should allow passing in a separate filename for the retina version 1`] = `Object {}`;

exports[`retinaImage should allow passing in a separate suffix for the retina version 1`] = `Object {}`;

exports[`retinaImage should allow passing in an extension with a dot 1`] = `Object {}`;

exports[`retinaImage should set the background-size if one is passed in 1`] = `Object {}`;

exports[`retinaImage should set the extension if one is passed in 1`] = `Object {}`;

exports[`retinaImage should throw an error when a non-string value is passed for backgroundSize 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/retinaImage.js --%c

retinaImage %cexpects a %c2nd parameter%c(%cundefined %c:%c string%c). However, you passed (%c'100' %c:%c number%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#retinaImage%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- mixins/retinaImage.js --%c

retinaImage %cexpects a %cparameter%c(%cundefined %c:%c undefined%c). However, you passed (%c'img' %c:%c string%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#retinaImage%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`retinaImage should throw an error when a non-string value is passed for extension 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/retinaImage.js --%c

retinaImage %cexpects a %c3rd parameter%c(%cundefined %c:%c string%c). However, you passed (%c'true' %c:%c boolean%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#retinaImage%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- mixins/retinaImage.js --%c

retinaImage %cexpects a %cparameter%c(%cundefined %c:%c undefined%c). However, you passed (%c'img' %c:%c string%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#retinaImage%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`retinaImage should throw an error when a non-string value is passed for fileName 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/retinaImage.js --%c

retinaImage %cexpects a %c1st parameter%c(%cundefined %c:%c string%c). However, you passed (%c'1' %c:%c number%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#retinaImage%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- mixins/retinaImage.js --%c

retinaImage %cexpects a %cparameter%c(%cundefined %c:%c undefined%c). However, you passed (%c'1' %c:%c number%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#retinaImage%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`retinaImage should throw an error when no parameters are passed 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/retinaImage.js --%c

retinaImage %crequires a %c1st parameter%c(%cundefined %c:%c string%c). However, you did not pass %cundefined%c.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#retinaImage%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`retinaImage should use _2x and png as the default suffix and extension, respectively 1`] = `Object {}`;
